Fix search results and overflow x

--- a/src/components/molecules/SearchResults/SearchResults.css
+++ b/src/components/molecules/SearchResults/SearchResults.css
@@ -1,61 +1,58 @@
 .search-results-dropdown {
     position: absolute;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    min-width: 900px;
-    max-width: 100%;
-    max-height: 500px;
+    top: 100%;
+    left: 0;
+    right: 0;
     background-color: var(--eerie-black);
     color: var(--lavender-web);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     padding: 5px;
-    overflow: scroll;
+    overflow-y: auto;
+    max-height: 500px;
+    z-index: 1000;
 }
 
 .search-results-column {
-    flex: 1;
+    width: 100%;
     padding: 10px;
 }
 
 .search-result-item {
     padding: 10px;
     border-bottom: 1px solid #ddd;
-    cursor: pointer;
+    display: flex;
+    align-items: center;
     color: var(--lavender-web);
+    text-decoration: none;
 }
 
 .search-result-item:hover {
-    background-color: #f2f2f2;
+    background-color: var(--lavender-web);
+    transition: all 0.3s ease-in-out;
     color: var(--eerie-black);
-    transition: all 0.2s ease-in-out;
+}
+.search-result-item img {
+    max-width: 100px;
+    margin-right: 10px;
+    height: auto;
 }
 
-.search-box {
-    position: relative;
-    display: inline-block;
+.search-result-item span {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
-.search-box i {
-    position: absolute;
-    left: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #aaa;
-}
-
-.search-box input {
-    padding-left: 30px;
-    background: transparent;
-    border: none;
-    color: white;
-}
-
-@media (max-width: 768px) {
+@media (min-width: 768px) {
     .search-results-dropdown {
-        flex-direction: column;
-        left: 0;
-        margin: 0;
+        min-width: 720px;
+        max-width: 80%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .search-result-item img {
+        max-width: 150px;
     }
 }
